force-app/main/default/objects/Product2/fields/Destructive_Test2__c.field-meta.xml
<CustomField>
    <fullName>Destructive_Test2__c</fullName>
    <label>Destructive Test2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>