force-app/main/default/objects/Product2/fields/Destructive_Test3__c.field-meta.xml
<CustomField>
    <fullName>Destructive_Test3__c</fullName>
    <description>No CLAAS product labelled as &amp;quot;new&amp;quot; is included in the quote. Destructive Test3</description>
    <label>Destructive Test3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>