force-app/main/default/objects/Product2/fields/Destructive_Test_4__c.field-meta.xml
<CustomField>
    <fullName>Destructive_Test_4__c</fullName>
    <description>No CLAAS product labelled as &quot;new&quot; is included in the quote. DT4</description>
    <label>Destructive Test 4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>