force-app/main/default/objects/Product2/fields/Destructive_Test__c.field-meta.xml
<CustomField>
    <fullName>Destructive_Test__c</fullName>
    <label>Destructive Test</label>
    <length>80</length>
    <type>Text</type>
</CustomField>